<resources>
    <string name="app_name" translatable="false">Travel PLAN</string>
    <string name="nav_header_title">Travel Planning and Control</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="of">of</string>
    <string name="OK" translatable="false">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose">Choose</string>
    <string name="site" translatable="false">Site</string>
    <string name="Wizard">Wizard</string>
    <string name="WizardDescription">Welcome to the APP\n\nWe offer you the opportunity to manage your fleet of Vehicles and your Travels. Feel free to use all the options in this solution.</string>
    <string name="bt_Save">Save</string>
    <string name="bt_Delete">Delete</string>
    <string name="bt_Edit">Edit</string>
    <string name="bt_Refuel">Refuel</string>
    <string name="bt_Done">Done</string>
    <string name="bt_Maintenance_Plan">Maintenance Plan</string>
    <string name="bt_Maintenance_Item">Maintenance Item</string>
    <string name="bt_Add">Add</string>
    <string name="bt_Filter">by Vehicle</string>
    <string name="bt_Filter_allType">all Type</string>
    <string name="bt_Filter_noType">no Type</string>
    <string name="bt_Filter_mountainRange">by Mountain Range</string>
    <string name="bt_Filter_road">by Road</string>
    <string name="bt_Filter_cave">by Cave</string>
    <string name="bt_Filter_touristSpot">by TouristSpot</string>
    <string name="bt_Filter_waterfall">by Waterfall</string>
    <string name="bt_Filter_church">by Church</string>
    <string name="bt_Filter_park">by Park</string>
    <string name="bt_Filter_castle">by Castle</string>
    <string name="bt_Filter_museum">by Museum</string>
    <string name="bt_List">List</string>
    <string name="bt_Map">Map</string>
    <string name="Msg_Confirm">Are you sure you want to perform the operation?</string>
    <string name="Msg_Select_Option">Select Option</string>
    <string name="Data_Validator_Error">Data Validator Error</string>
    <string name="Error_Saving_Data">Error Saving Data</string>
    <string name="Error_Including_Data">Error Including Data</string>
    <string name="Error_Changing_Data">Error Changing Data</string>
    <string name="Error_Deleting_Data">Error Deleting Data</string>
    <string name="Error_Data_Validation">Error in data validation</string>
    <string name="menu_home">Home</string>
    <string name="menu_vehicle">Vehicles</string>
    <string name="menu_travel">Travels</string>
    <string name="menu_accommodation">Accommodation</string>
    <string name="menu_achievement">Achievement</string>
    <string name="menu_fuel_supply">Fuel Supply</string>
    <string name="menu_driver">Driver</string>
    <string name="menu_account">Account</string>
    <string name="menu_person">Person</string>
    <string name="menu_maintenance_plan">Maintenance Plan</string>
    <string name="menu_maintenance">Maintenance Service</string>
    <string name="menu_pending">Pending Vehicle</string>
    <string name="action_settings">Settings</string>
    <string name="menu_general">General</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_insurance_company">Insurance Company</string>
    <string name="menu_broker">Broker</string>
    <string name="menu_currency_quote">Currency Quote</string>
    <string name="personal_header">Personal Data</string>
    <string name="definition_header">Definitions</string>
    <string name="preferences_header">Preferences</string>
    <string name="personal_name">Your name</string>
    <string name="personal_age">Your age</string>
    <string name="personal_gender">Your gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="signature_title">Your signature</string>
    <string name="color_scheme_dark_title">Color Scheme Dark</string>
    <string name="color_scheme_off">Color Scheme Normal active</string>
    <string name="color_scheme_on">Color Scheme Dark active</string>
    <string name="language">Language</string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="vehicle_default">Vehicle Default</string>
    <string name="travel_default">Travel Default</string>
    <string name="achievement_view_mode">Achievement View Mode</string>
    <string name="Vehicle">Vehicle</string>
    <string name="Vehicle_Register">Register Vehicle</string>
    <string name="Vehicle_Deleting">Deleting Vehicle</string>
    <string name="A_vehicle_needs_to_be_selected">A vehicle needs to be selected</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="suv">SUV</string>
    <string name="Vehicle_Id">Identification Vehicle</string>
    <string name="Vehicle_Image">Vehicle Image</string>
    <string name="Vehicle_Type">Vehicle Type</string>
    <string name="Vehicle_Name">Name Vehicle</string>
    <string name="Vehicle_Short_Name">Short Name </string>
    <string name="Vehicle_Brand">Brand</string>
    <string name="Vehicle_Model">Model</string>
    <string name="Vehicle_Fuel_Type">Fuel Type</string>
    <string name="Vehicle_Year_Mode">Year Model</string>
    <string name="Vehicle_Year_Manufacture">Year Manufacture</string>
    <string name="Vehicle_Licence_Plate">Licence Plate</string>
    <string name="Vehicle_Vehicle_Owner">Vehicle Owner</string>
    <string name="Vehicle_Vin">VIN</string>
    <string name="Vehicle_Licence_Number">Licence Number</string>
    <string name="Vehicle_State">State</string>
    <string name="Vehicle_City">City</string>
    <string name="Vehicle_Color">Color</string>
    <string name="Vehicle_Color_Code">Color Code</string>
    <string name="Vehicle_DtAcquisitionSale">Acquisition/Sale</string>
    <string name="Vehicle_DtAcquisition">Acquisition Data</string>
    <string name="Vehicle_Odometer_Acquisition">Odometer Acquisition</string>
    <string name="Vehicle_DtSale">Sale Data</string>
    <string name="Vehicle_Doors">Doors</string>
    <string name="Vehicle_Capacity">Capacity</string>
    <string name="Vehicle_Power">Power</string>
    <string name="Vehicle_Full_Capacity">Full Capacity</string>
    <string name="Avg_Consumption">Average Consumption</string>
    <string name="Vehicle_Avg_Consumption">Vehicle Consumption</string>
    <string name="Travel_Avg_Consumption">Travel Consumption</string>
    <string name="Vehicle_Avg_Cost_Litre">Average Cost</string>
    <string name="Vehicle_Odometer">Odometer</string>
    <string name="Vehicle_DtOdometer">Date Odometer</string>
    <string name="Vehicle_Estimated_Value">Estimated Value</string>
    <string name="Vehicle_DtLastFueling">Date Last Fueling</string>
    <string name="Vehicle_LastSupplyReasonType">Last Supply Reason Type</string>
    <string name="Vehicle_AccumulatedNumberLiters">Number Liters</string>
    <string name="Vehicle_AccumulatedSupplyValue">Supply Value</string>
    <string name="Vehicle_MaintenanceItem">Vehicle Maintenance Item</string>
    <string name="Vehicle_Plan">Vehicle Maintenance Plan</string>
    <string name="Vehicle_Plan_Deleting">Deleting Vehicle has Plan</string>
    <string name="Maintenance_Vehicle">Maintenance Vehicle</string>
    <string name="Maintenance_Deleting">Deleting Maintenance Vehicle</string>
    <string name="Maintenance_Type">Maintenance Type</string>
    <string name="Maintenance_Detail">Maintenance Detail</string>
    <string name="Maintenance_Date">Maintenance Date</string>
    <string name="Maintenance_Odometer">Maintenance Odometer</string>
    <string name="Maintenance_CurrencyType">Currency Type</string>
    <string name="Maintenance_Value">Maintenance Value</string>
    <string name="Maintenance_Location">Maintenance Location</string>
    <string name="Maintenance_Note">Maintenance Note</string>
    <string name="MaintenanceItem_Deleting">Deleting Vehicle Maintenance Item </string>
    <string name="MaintenanceItem">Maintenance Item </string>
    <string name="MaintenanceItem_Type">Maintenance Item Type</string>
    <string name="MaintenanceItem_Expiration">Expiration</string>
    <string name="MaintenanceItem_Value">Value</string>
    <string name="MaintenanceItem_Note">Note</string>
    <string name="Next_VehicleMaintenance">Next Vehicle Maintenance</string>
    <string name="NextMaintenance_Description">Description</string>
    <string name="NextMaintenance_Measure">Measure</string>
    <string name="NextMaintenance_Service">Service</string>
    <string name="PendingVehicle">Pending Vehicle</string>
    <string name="PendingVehicle_Deleting">Deleting Pending Vehicle</string>
    <string name="PendingVehicle_ServiceType">Service Type</string>
    <string name="PendingVehicle_Note">Note</string>
    <string name="PendingVehicle_Currency_Type">Currency Type</string>
    <string name="PendingVehicle_ExpectedValue">Expected Value</string>
    <string name="PendingVehicle_StatusPending">Status Pending</string>
    <string name="pending">pending</string>
    <string name="concluded">concluded</string>
    <string name="Maintenance_Plan">Maintenance Plan</string>
    <string name="Maintenance_Plan_Deleting">Deleting Maintenance Plan</string>
    <string name="Maintenance_Plan_Description">Description</string>
    <string name="Maintenance_Plan_Measure">Measure</string>
    <string name="Maintenance_Plan_Expiration">Expiration</string>
    <string name="Maintenance_Plan_New_Expiration">New Expiration</string>
    <string name="Maintenance_Plan_Recommendation">Recommendation</string>
    <string name="Maintenance_Plan_Recurring_Service">Recurring Service</string>
    <string name="indeterminate">Indeterminate</string>
    <string name="km">Km</string>
    <string name="days">Day(s)</string>
    <string name="date">Date</string>
    <string name="FuelSupply_Vehicle">Supply Vehicle</string>
    <string name="FuelSupply_Deleting">Deleting Supply</string>
    <string name="FuelSupply_Supply_Date_must_be_less">Supply Date must be less than the current date</string>
    <string name="FuelSupply_Gas_Station">Gas Station</string>
    <string name="FuelSupply_Gas_Station_Location">Fuel Supply Gas Station Location</string>
    <string name="FuelSupply_Combustible">Combustible</string>
    <string name="FuelSupply_Account">Account</string>
    <string name="FuelSupply_Supply_Date">Date</string>
    <string name="FuelSupply_Number_Liters">Number of Liters</string>
    <string name="FuelSupply_Currency_Type">Currency Type</string>
    <string name="FuelSupply_Fuel_value">Fuel Value</string>
    <string name="FuelSupply_Supply_Value">Supply Value</string>
    <string name="FuelSupply_Full_Tank">Full Tank</string>
    <string name="Vehicle_Travelled_Distance">Travelled Distance</string>
    <string name="FuelSupply_Reason_Type">Supply Reason Type</string>
    <string name="FuelSupply_Reason">Reason</string>
    <string name="Vehicle_Stat_Cost_Per_Litre">Cost Per Litre</string>
    <string name="FuelSupply_AssociatedTravel">Associated Travel</string>
    <string name="FuelSupply_Accumulated">Accumulated</string>
    <string name="FuelSupply_Accumulated_Number_Liters">Accumulated Number Liters</string>
    <string name="FuelSupply_Accumulated_Supply_Value">Accumulated Supply Value</string>
    <string name="gasoline_common">Gasoline Common</string>
    <string name="Insurance_Contact_Type">Type</string>
    <string name="Insurance_Contact_Description">Description</string>
    <string name="Insurance_Contact_Detail">Detail</string>
    <string name="TravelExpenses_ExpenseType">Expense Type</string>
    <string name="TravelExpenses_ExpectedValue">Expected Value</string>
    <string name="TravelExpenses_Note">Note</string>
</resources>