<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_menu_vehicle"
            android:title="@string/menu_vehicle" />
        <item
            android:id="@+id/nav_fuel_supply"
            android:icon="@drawable/ic_supply"
            android:title="@string/menu_fuel_supply" />
        <item
            android:id="@+id/nav_maintenance"
            android:icon="@drawable/ic_menu_maintenance"
            android:title="@string/menu_maintenance" />
    </group>
    <group android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/ic_menu_travel"
            android:title="@string/menu_travel" />
    </group>
    <group android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/action_settings"
            app:showAsAction="ifRoom" />
    </group>
    <item android:id="@+id/grp4"
        android:title="@string/menu_general">
        <menu>
            <item
                android:id="@+id/nav_insurance"
                android:icon="@drawable/ic_menu_insurance"
                android:title="@string/menu_insurance" />
            <item
                android:id="@+id/nav_insurance_company"
                android:icon="@drawable/ic_menu_insurance_company"
                android:title="@string/menu_insurance_company" />
            <item
                android:id="@+id/nav_broker"
                android:icon="@drawable/ic_menu_broker"
                android:title="@string/menu_broker" />
            <item
                android:id="@+id/nav_currency_quote"
                android:icon="@drawable/ic_menu_currency_quote"
                android:title="@string/menu_currency_quote" />
        </menu>
    </item>
</menu>