<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jacksonasantos.travelplan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_vehicle"
        android:name="com.jacksonasantos.travelplan.ui.vehicle.VehicleFragment"
        android:label="@string/menu_vehicle"
        tools:layout="@layout/fragment_vehicle" />

    <fragment
        android:id="@+id/nav_fuel_supply"
        android:name="com.jacksonasantos.travelplan.ui.vehicle.FuelSupplyFragment"
        android:label="@string/menu_fuel_supply"
        tools:layout="@layout/fragment_fuel_supply" />

    <fragment
        android:id="@+id/nav_maintenance"
        android:name="com.jacksonasantos.travelplan.ui.vehicle.MaintenanceFragment"
        android:label="@string/menu_maintenance"
        tools:layout="@layout/fragment_maintenance" />

    <fragment
        android:id="@+id/nav_travel"
        android:name="com.jacksonasantos.travelplan.ui.travel.TravelFragment"
        android:label="@string/menu_travel"
        tools:layout="@layout/fragment_travel" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jacksonasantos.travelplan.SettingsActivity$SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/activity_settings" />
</navigation>