<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    tools:context=".ui.vehicle.VehicleFragment">

    <ImageView
        android:id="@+id/imVehicleType"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginEnd="@dimen/labels_margin"
        android:contentDescription="@string/Vehicle_Type" />

    <TextView
        android:id="@+id/txtPlate"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/labels_margin"
        android:layout_marginRight="@dimen/labels_margin"
        android:layout_marginStart="@dimen/labels_margin"
        android:layout_marginEnd="@dimen/labels_margin"
        app:autoSizeMaxTextSize="12sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/txtShortName"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/labels_margin"
        android:layout_marginRight="@dimen/labels_margin"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        app:autoSizeMaxTextSize="12sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <ImageButton
        android:id="@+id/btnPlan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/bt_Maintenance_Plan"
        app:srcCompat="@drawable/ic_menu_maintenance_plan" />

    <ImageButton
        android:id="@+id/btnRefuel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/bt_Refuel"
        app:srcCompat="@drawable/ic_supply" />

    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/bt_Edit"
        app:srcCompat="@drawable/ic_button_edit" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/bt_Delete"
        app:srcCompat="@drawable/ic_button_delete" />

</LinearLayout>