<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Insurance_Contact_Type"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/etType_Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="textCapSentences"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Insurance_Contact_Description"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/etDescription_Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="textCapSentences"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Insurance_Contact_Detail"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/etDetail_Contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:inputType="textCapSentences"
        tools:ignore="LabelFor" />

</LinearLayout>